ran a GA parameter finding test

--- a/config.backup.ini
+++ b/config.backup.ini
@@ -1,9 +1,9 @@
 [genome]
-GENERATIONS			= 1200
-NUM_GENOMES			= 1024
-MUTATION_RATE		= 0.16666
-CROSSOVER_RATE		= 0.357
-RESET_RATE			= 0.04
+GENERATIONS			= 200
+NUM_GENOMES			= 256
+MUTATION_RATE		= 0.2
+CROSSOVER_RATE		= 0.1
+RESET_RATE			= 0.02
 
 [multiobjective]
 WEIGHT_DOSE         = 1.0
@@ -21,8 +21,8 @@ IN_VOI		        = voi.csv
 OUT_DOSE		    = dose
 OUT_BW		        = bixelweights
 OUT_BATCH           = batch
-OUTPUT_ON           = true
+OUTPUT_ON           = false
 TERMINAL_ON         = true
-BATCH_ON            = false
+BATCH_ON            = true
 BATCH_NUM           = 0
 
